--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana talk</title>
-</head>
-<body>
-    <h1>Banana speak</h1>
+    <style>
+      textarea {
+        width: 45%;
+        display: block;
+        /* margin: auto; */
+        padding: 1rem;
+        height: 10vh;
+      }
+
+      #output{
+        border: 2px solid black;
+        width: 45%;
+        display: block;
+        /* margin: auto; */
+        padding: 1rem;
+        height: 10vh;
+      }
+      #btn-translate{
+       margin: 1rem;
+      }
+    </style>
+  </head>
+
+  <body>
+    <h1>Talk bananaaa</h1>
+
+    <textarea
+      id="txt-input"
+      placeholder="Enter any text to translate into banana talk"
+    >
+    </textarea>
+
+    <button id="btn-translate">Translate</button>
+
     
-</body>
+
+    <div style="font-size: larger;">
+        Output will show here 👇
+    </div>
+
+    <div id="output"></div>
+
+
+    <script src="app.js" type="text/javascript"></script>
+  </body>
 </html>
